# FedMind

./: .gitignore  README.md  config.yaml  hello.py  pyproject.toml
.github/workflows/: pylint.yml
examples/: cuda_demo.py  distilbert_demo.py  fedprox_demo.py  tiny_image_net_demo.py
fedmind/: client.py  server.py  utils.py
fedmind/algs/: fedavg.py  fedprox.py  mfl.py
src/flair/: client.py  config.py  fedavg.py  server.py
src/flair/algs/: fedavg.py
src/test/: test_fedavg.py
test/: test_config.py  test_fedavg.py
