[project]
name = "flair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "pytest>=8.3.3",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[project.scripts]
new = "flair:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportPrivateImportUsage = "none"
